--- a/style.css
+++ b/style.css
@@ -2,19 +2,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,700;1,500;1,700&display=swap');
 
 * {
-      padding: 0px;
-      margin: 0px;
+      padding: 0;
+      margin: 0;
       box-sizing: border-box;
 }
 
 :root {
-      --main-font: font-family: 'Montserrat', sans-serif;
-      --secondary-font: font-family: 'Fraunces', serif;
-      --Dark-cyan: #3D8168;
-      --Cream: #F3EAE3;
-      --Very-dark-blue: #1C232B;
-      --Dark-grayish-blue: #6C7289;
-      --White: #fff;
+      --main-font: 'Fraunces', sans-serif;
+      --secondary-font: 'Montserrat', sans-serif;
+      --Dark-cyan: hsl(158, 36%, 37%);
+      --Cream: hsl(30, 38%, 92%);
+      --Very-dark-blue: hsl(212, 21%, 14%);
+      --Dark-grayish-blue: hsl(228, 12%, 48%);
+      --White: hsl(0, 0%, 100%);
       --radius: 10px;
 }
 
@@ -32,7 +32,7 @@
 
 .card {
       height: 525px;
-      width: 17%;
+      width: 19%;
 }
 
 .card.header-image {
@@ -62,16 +62,16 @@
 
 .card.content .main-title {
       font-family: var(--main-font);
-      font-size: 2.0em;
-      line-height: 1.4em;
+      font-size: 1.5em;
+      line-height: 2.0em;
 }
 
-.card-paragraph {
+.card .paragraph {
       font-family: var(--secondary-font);
-      font-size: 1.4em;
-      line-height: 1.4em;
+      font-size: 1.2em;
+      line-height: 1.8em;
       color: var(--Dark-grayish-blue);
-      margin-bottom: 0.7em;
+      margin-bottom: 0.7;
 }
 
 .price-container {
@@ -101,7 +101,6 @@
       margin-top: 1.2em;
       padding: 15px;
       background-color: var(--Dark-cyan);
-      width: 80%;
       border-radius: 10px;
       color: var(--White);
       text-decoration: none;
@@ -111,8 +110,8 @@
 .btn-link button {
       font-family: var(--secondary-font);
       background-color: transparent;
-      border: none;
       color: var(--White);
+      border: none;
       font-weight: 700;
       font-size: 1.2em;
       cursor: pointer;
@@ -122,38 +121,40 @@
       background-color: #1A4031;
 }
 
-@media only screen and (max-width : 375px) {
+@media (max-width : 375px) {
       .container {
-            padding: 20px;
+            padding: 15px;
             flex-direction: column;
             justify-content: space-around;
       }
 
       .card {
-            height: 525px;
             width: 100%;
       }
 
       .card.header-image {
             background-image: url("./images/image-product-mobile.jpg");
             border-top-right-radius: var(--radius);
-            border-bottom-left-radius: 0px
+            border-bottom-left-radius: 0px;
       }
 
       .card.content {
             padding: 1.5em 2em;
+            border-bottom-right-radius: var(--radius);
             border-bottom-left-radius: var(--radius);
             border-top-right-radius: 0px;
       }
 
       .card.content .main-title {
-            font-size: 1.5em;
+            font-size: 1em;
             font-weight: 500;
+            line-height: 1.8rem;
       }
 
-      .card-paragraph {
+      .card.paragraph {
             font-size: 1.2em;
             font-weight: 500;
             line-height: 1.5em;
       }
+
 }
